test/conformance/chainsaw/generating-policies/reports/with-exception-pass-result/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: reports-with-exceptions
spec:
  policyRefs:
  - name: reports-with-exceptions-pass-result
    kind: GeneratingPolicy
  matchConditions:
    - name: "check-namespace-name"
      expression: "object.metadata.name == 'testing'"
  reportResult: pass
