test/conformance/chainsaw/generating-policies/reports/with-exception-pass-result/triggers.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing-3
---
apiVersion: v1
kind: Namespace
metadata:
  name: production-3
