test/conformance/chainsaw/generating-policies/reports/with-exception-pass-result/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: reports-with-exceptions-pass-result
spec:
  steps:
  - name: create exception
    try:
    - create:
        file: exception.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: reports-with-exceptions-pass-result
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: create triggers
    try:
    - apply:
        file: triggers.yaml
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: check that the reports are generated
    try:
    - assert:
        file: report-assert.yaml
